@@ -115,7 +115,7 @@ $_lang['user_group_err_save'] = 'An error occurred while trying to save the user
 $_lang['user_group_management_msg'] = 'Manage user memberships in groups and apply roles.';
 $_lang['user_group_member_err_already_in'] = 'User is already in this user group!';
 $_lang['user_group_member_err_create'] = 'An error occurred while attempting to add the user to a user group.';
-$_lang['user_group_member_err_not_found'] = 'User is not in this user group!';
+$_lang['user_group_member_err_nf'] = 'User is not in this user group!';
 $_lang['user_group_member_err_remove'] = 'An error occurred while trying to remove the user from the group.';
 $_lang['user_group_member_err_save'] = 'An error occurred while trying to add the user to the group.';
 $_lang['user_group_new'] = 'New User Group';
